<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/main_ic_extension_white_24dp"
            android:title="@string/main_item_menu_home"/>


        <item android:id="@+id/nav_menu_recommend"
            android:icon="@drawable/main_ic_explore_white_24dp"
            android:title="@string/main_item_menu_recommend"
            />

        <item android:id="@+id/nav_menu_theme"
            android:icon="@drawable/main_ic_build_white_24dp"
            android:title="@string/main_item_menu_theme"
            />


        <item
            android:id="@+id/nav_menu_feedback"
            android:icon="@drawable/main_ic_more_horiz_white_24dp"
            android:title="@string/main_item_menu_feedback"/>
        <item
            android:id="@+id/nav_menu_setting"
            android:icon="@drawable/main_ic_settings_white_24dp"
            android:title="@string/main_item_menu_setting"/>

        <item

            android:id="@+id/nav_menu_categories"
            android:icon="@drawable/main_ic_star_white_24dp"
            android:title="@string/main_item_menu_about"/>

    </group>
</menu>